# xbar-google-calendar

./: README.md  pyproject.toml  test.py  xbar_google_calendar.py
